fix: add border on search input field on home page hero so that input is more visible on safari mobile

--- a/client/src/homepage/homepage-hero/index.scss
+++ b/client/src/homepage/homepage-hero/index.scss
@@ -87,6 +87,7 @@
 
     .search-input-field {
       background-color: rgba(1, 1, 1, 0.5);
+      border-color: var(--border-primary);
       border-radius: 10rem;
       padding: 2rem;
       width: 100%;
